# jenkins-notifications

./: CMakeLists.txt  LICENSE  README.md  configuration.h.in
cmake/: FindRapidjson.cmake
src/: main.cpp
src/jnotify/: Config.cpp  Config.h  JNotify.cpp  JNotify.h  JnConfig.cpp  JnConfig.h  UrlHook.cpp  UrlHook.h  UrlListener.cpp  UrlListener.h  common.h
test/: CMakeLists.txt  tests.cpp
test/res/: jnotify.cfg
